# product_doc_management_system

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.md  compose.yml  env.exmple  pyproject.toml  pytest.ini  requirements.txt  seed_db.py  untitle
app/: auth.py  crud.py  database.py  main.py  models.py  seed.py
app/routers/: products.py
app/static/css/: styles.css
app/static/js/: app-auth.js  app.js  firebase-config.js
app/templates/: base.html  create.html  index.html  login.html  search.html  update.html
docs/: API_REFERENCE.md  CONTRIBUTING.md  TESTING.md  arch.md  project.md  reflection.md
tests/: __init__.py  conftest.py  test_api.py  test_crud.py  test_models.py
